--- a/pages/item/item.wxss
+++ b/pages/item/item.wxss
@@ -1,1 +1,21 @@
 /* pages/item/item.wxss */
+.grid{  
+  margin:18rpx;
+}
+.grid .item{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  border-bottom: 10rpx solid #fff;
+  border-top: 10rpx solid #fff;
+  background-color: #eee;
+  border-radius: 10px;
+}
+.grid .item image{
+  flex:1;
+  width: 100%;
+	height: 200rpx;
+}
+.grid .item .content{
+  flex:2;
+}
