--- a/app.wxss
+++ b/app.wxss
@@ -1,4 +1,4 @@
-/**app.wxss**/
+/**app.wxss
 .container {
   height: 100%;
   display: flex;
@@ -7,4 +7,10 @@
   justify-content: space-between;
   padding: 200rpx 0;
   box-sizing: border-box;
-} 
+} **/
+
+page,view,text,swiper,swiper-item,image,navigator{
+  padding:0;
+  margin: 0;
+  box-sizing: border-box;
+}
