--- a/pages/photo/photo.wxss
+++ b/pages/photo/photo.wxss
@@ -1,1 +1,21 @@
 /* pages/photo/photo.wxss */
+
+.total{
+  background-color: blue;
+}
+.row{
+  display: flex;
+  justify-content:center;
+  
+}
+.item{
+  margin: 20rpx;
+  height: 400rpx;
+  width:320rpx;
+  background-color: cadetblue;
+}
+.item image{
+  height: 350rpx;
+  width:300rpx;
+  margin-left: 15rpx;
+}
